fix: do not zoom on mobile, show spinner in safari

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,8 @@
         @apply bg-slate-100 dark:bg-slate-800;
     }
 
-
     body {
-        @apply font-mono bg-style;
+        @apply font-mono bg-style touch-none;
     }
 }
 
